Added Vancouver office to contact page

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ p img {
 	margin-right: 10px;
 } 
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
 	margin: 0;
 	margin-bottom: 10px;
 	font-family: Trebuchet MS;
