--- a/css/assignment_form.css
+++ b/css/assignment_form.css
@@ -1,3 +1,9 @@
+a#add_vehicle {
+  color: #17308A;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 h1 {
 	width: 700px;
 	background-image: url("../images/heading_wide.jpg");
